# zapdat

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ANALYSIS_RULES.md  CLAUDE.md  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  sample_data.csv  semantic_test_data.csv  test_analyzer.py  test_custom_charts.py  test_file_reader.py  test_id_analysis.py  test_id_columns.csv  test_id_detection.py  test_id_edge_cases.csv  test_semantic_types.py
.claude/commands/: design.md  dev.md  test.md
.github/workflows/: ci.yml
backend/: analyzer.py  file_reader.py  llm_insights.py  main.py  visualizations.py
frontend/: index.html
